--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "text-highlighter",
+  "name": "sentence-highlighter-top",
   "type": "module",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "fix": "eslint . --fix --cache",
     "lint": "eslint . --cache",
@@ -9,10 +10,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "release": "bumpp",
-    "prepare": "simple-git-hooks"
+    "prepare": "simple-git-hooks",
+    "publish": "pnpm -r publish --access public --no-git-checks"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.2",
+    "bumpp": "^10.2.0",
     "lint-staged": "^16.1.2",
     "simple-git-hooks": "^2.13.0",
     "typescript": "~5.8.3",
