--- a/packages/sentence-highlighter/package.json
+++ b/packages/sentence-highlighter/package.json
@@ -21,7 +21,6 @@
     "unbuild": "^3.5.0"
   },
   "devDependencies": {
-    "typescript": "~5.8.3",
-    "vite": "^7.0.0"
+    "typescript": "~5.8.3"
   }
 }
