--- a/packages/sentence-highlighter/package.json
+++ b/packages/sentence-highlighter/package.json
@@ -2,6 +2,9 @@
   "name": "sentence-highlighter",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@10.7.0",
+  "author": "hhk-png <fangluoabc@163.com>",
+  "license": "MIT",
   "exports": {
     ".": {
       "import": "./dist/highlighter.mjs",
