--- a/.github/workflows/deploy-highlighter.yml
+++ b/.github/workflows/deploy-highlighter.yml
@@ -37,7 +37,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build packages
+      - name: Build sentence-highlighter
+        run: pnpm run build
+        working-directory: ./packages/sentence-highlighter
+
+      - name: Build example/case
         run: pnpm run build
         working-directory: ./example/case
 
